# SIL-C

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt  setup.sh  silc_trajectory_matching_demo.ipynb
docs/: index.html  interactive_visualize.html  lifelong_learning_options.md  trainer_execution_guide.md
exp/: README.md  evaluator.py  example.sh  reproduce.md  trainer.py
exp/instruction_embedding/: checker.py  embedding.py  kitchen.json  kitchen.pkl  mmworld.json
exp/instruction_embedding/kitchen/: 1536.pkl  256.pkl  3072.pkl  512.pkl  768.pkl
exp/instruction_embedding/kitchen_clip/: 512.pkl
exp/instruction_embedding/mmworld/: 1536.pkl  256.pkl  3072.pkl  512.pkl  768.pkl
exp/scripts/: example.sh  trainer.sh
remoteEnv/kitchen/: chain0.xml  kitchen.py  kitchen_client.py  kitchen_img_dataset.py  kitchen_server.py  readme.md  requirements.txt  verify_dataset_alignment.py
remoteEnv/libero/: README.MD  libero_client.py  libero_server.py  simple_libero_policy_env.py
remoteEnv/multiStageMetaworld/: mmworld_client.py  mmworld_server.py  multiStageEnv.py
setup/: SETUP_GUIDE.md  download_dataset.sh  gpu_check.py  install_mujoco.sh  setup_remote_env.sh
setup/legacy/: requirements.txt
setup/python12/: README.md  cuml.sh  requirements.txt
src/AppOSI/config/: baseline_config.py  experiment_config.py  kitchen_scenario.py  libero_scenario.py  mmworld_scenario.py  skill_stream_config.py
src/AppOSI/dataset/: dataloader.py
src/AppOSI/environment/: remote.py
src/AppOSI/trainer/: evaluator.py  skill_trainer.py
src/SILGym/models/: readme.md
(+61 files in other folders)
